# sepia-filter

./: README.md  profile-report.md  pyproject.toml  setup.py  timing-report.txt
instapy/: __init__.py  cli.py  cython_filters.c  cython_filters.html  cython_filters.pyx  numba_filters.py  numpy_filters.py  profiling.py  python_filters.py  timing.py
instapy.egg-info/: PKG-INFO  SOURCES.txt
test/: test_cython.py  test_numba.py  test_numpy.py  test_python.py
